--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<iframe src="https://drive.google.com/file/d/1P8d4NsuIeFqeaI19hgix9RxdNnyuM32I/view?usp=sharing"></iframe>
+<iframe src="https://drive.google.com/file/d/1P8d4NsuIeFqeaI19hgix9RxdNnyuM32I/preview"></iframe>
