--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<iframe src="https://drive.google.com/file/d/1P8d4NsuIeFqeaI19hgix9RxdNnyuM32I/preview"></iframe>
+<iframe src="https://drive.google.com/file/d/1P8d4NsuIeFqeaI19hgix9RxdNnyuM32I/preview" height="100%" width="100%"></iframe>
+<br>
+&copy;2020 RightTV & PixelGame
