--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-<iframe src="https://drive.google.com/file/d/1P8d4NsuIeFqeaI19hgix9RxdNnyuM32I/preview" height="100%" width="100%" allowfullscreen></iframe>
+<a href="https://drive.google.com/file/d/1rR4q6EUgrS6-ncSgH_OL-PnfqLEm1FYn/view?usp=sharing">Latest Video</a>
 <br>
 &copy;2020 RightTV & PixelGame
